guess for 1 to 100 fixed

--- a/module_0/I_guess.ipynb
+++ b/module_0/I_guess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,7 @@
     "def score_game(game_core):\n",
     "    '''Запускаем игру 1000 раз, чтобы узнать, как быстро игра угадывает число'''\n",
     "    count_ls = []\n",
+    "    import numpy as np\n",
     "    np.random.seed(1)  # фиксируем RANDOM SEED, чтобы ваш эксперимент был воспроизводим!\n",
     "    random_array = np.random.randint(1,101, size=(1000))\n",
     "    for number in random_array:\n",
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +61,7 @@
        "5"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
